--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
 
   "name": "jobify",
+
   "version": "1.0.0",
+
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+
   "main": "index.js",
+
   "type": "module",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "setup-project": "npm i && cd client && npm i",
+    "dev": "nodemon server.js"
+
   },
+
   "keywords": [],
+
   "author": "",
-  "license": "ISC"
+
+  "license": "ISC",
+
+  "dependencies": {
+
+    "express": "^4.18.2",
+
+    "nodemon": "^2.0.22"
+
+  }
 
 }
+
