--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
 
     "setup-project": "npm i && cd client && npm i",
+
     "dev": "nodemon server.js"
 
   },
@@ -25,9 +26,13 @@
 
   "dependencies": {
 
+    "dotenv": "^16.0.3",
+
     "express": "^4.18.2",
 
-    "nodemon": "^2.0.22"
+    "morgan": "^1.10.0",
+
+    "nodemon": "^3.1.10"
 
   }
 
