--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 
     "express-async-errors": "^3.1.1",
 
+    "http-status-codes": "^2.2.0",
+
     "mongoose": "^7.0.5",
 
     "morgan": "^1.10.0",
